# libcamera

include/libcamera/: framebuffer.h  request.h
include/libcamera/internal/: log.h
include/libcamera/ipa/: ipu3.mojom
src/: meson.build
src/android/: camera_device.cpp  camera_device.h  meson.build
src/ipa/: meson.build
src/ipa/ipu3/: ipu3.cpp
src/ipa/ipu3/aic/: aic.cpp  aic.h
src/ipa/ipu3/aiq/: aiq.cpp
src/libcamera/: buffer.cpp  camera.cpp  log.cpp  meson.build  request.cpp  v4l2_subdevice.cpp
src/libcamera/pipeline/ipu3/: frames.cpp  frames.h  ipu3.cpp
src/libcamera/proxy/worker/: meson.build
src/qcam/: main_window.cpp  main_window.h  viewfinder_qt.cpp  viewfinder_qt.h
test/: meson.build
test/cam/: meson.build
utils/ipc/generators/libcamera_templates/: module_ipa_serializer.h.tmpl  serializer.tmpl
